[metadata]
name = supSMSGecko
version = 0.1.0a1
author = sup39
author_email = sms@sup39.dev
description = A helper library to write Gecko code for Super Mario Sunshine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sup39/supSMSGecko
license = MIT
project_urls =
  Bug Tracker = https://github.com/sup39/supSMSGecko/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.8
install_requires =
  supGecko >=0.1.0a4, <0.2.0

[options.packages.find]
where = src
